--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,8 +8,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: check code format
-        uses: actions/checkout@v2
-        run: |
+      - uses: actions/checkout@v2
+      - run: |
           - python --version
           - python -m venv venv
           - source venv/bin/activate
@@ -18,8 +18,8 @@ jobs:
           - flake8 .
 
       - name: check types
-        uses: actions/checkout@v2
-        run: |
+      - uses: actions/checkout@v2
+      - run: |
           - python --version
           - python -m venv venv
           - source venv/bin/activate
@@ -31,8 +31,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: test
-        uses: actions/checkout@v2
-        run: |
+      - uses: actions/checkout@v2
+      - run: |
           - python --version
           - python -m venv venv
           - source venv/bin/activate
