--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,6 +15,7 @@ jobs:
           source venv/bin/activate
           pip install black
           black ./
+          rm -rf venv
 
   tests:
     runs-on: ubuntu-latest
@@ -27,4 +28,5 @@ jobs:
            source venv/bin/activate
            pip install -e .
            pytest
+           rm -rf venv
 
